--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express-jwt": "^7.4.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "apollo-server": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "express-jwt": "^8.4.1",
     "graphql": "^15.8.0",
+    "graphql-shield": "^7.6.5",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
