--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "api-mentions",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node --esm index.ts",
-    "devStart": "nodemon index.ts"
+    "devStart": "nodemon --watch './**/*.ts' --exec 'ts-node' index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,19 +23,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "express-jwt": "^8.4.1",
-    "graphql": "^15.8.0",
+    "fs": "^0.0.1-security",
+    "graphql": "^16.7.1",
     "graphql-shield": "^7.6.5",
+    "graphql-upload": "^16.0.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
+    "@types/graphql-upload": "^16.0.0",
     "@types/node": "^18.15.11",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
